# beketov_coursework

./: CMakeLists.txt  README.md  main.cpp  mandelbrot.cpp  mandelbrot.h  menu.cpp  menu.h
documentation/: Doxyfile.in
sources/: CMakeLists.txt  main.cpp  mandelbrot.cpp  mandelbrot.h  menu.cpp  menu.h  sierpinski.cpp  sierpinski.h  tree.cpp  tree.h
